# Aegis-WAN

./: README.md  justfile
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: data.ts  store.svelte.ts  types.ts
frontend/src/lib/components/: Globe.svelte  HoldButton.svelte
frontend/src/lib/helpers/: globe.ts
notes/: AEGIS_WAN_Context.md  APIEndpoints.md  Aegis WAN.md  ClassifyNetworkStreams.md  ControlPlaneSwitch.md  Endpoints.md  List Devices.md  SimLogic.md
predictor/: aegis_exporter.py  app.py  cli.py  predictor.py  pretrain.py  pyproject.toml  simulation.py
prometheus/: compose.yml  prometheus.yml
router/apiserver/: example-responses.md  exporter.py  main.py  pyproject.toml  router.spec.yml  vessels.json
vessel-gps/: README.md  main-wNoise.py  main.py  pyproject.toml
