[project]
name = "predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.24.1",
    "requests>=2.33.0",
    "river>=0.23.0",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.42.0",
]
